<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage"
    android:background="@drawable/background"
    android:orientation="vertical">
    <TextView
        android:id="@+id/datasokoni"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/data_sokoni"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/wecome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_isaac_to_data_sokoni_where_we_value_our_customers"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:layout_marginTop="50dp"
        android:lineSpacingExtra="4dp"
        android:padding="8dp"
        android:maxLines="5"
        android:ellipsize="none"
        android:textAlignment="center"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_edittext2"
        android:backgroundTint="@color/Royal_Purple"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/dataoffers"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:text="@string/_1_buy_data_deals"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/Royal_Purple"/>
        <Button
            android:id="@+id/monthlyoffers"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:text="@string/_2_buy_monthly_deals"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/Royal_Purple"/>
        <Button
            android:id="@+id/smsoffers"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:text="@string/_3_buy_buy_sms_deals"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/Royal_Purple"/>

    </LinearLayout>
    <TextView
        android:id="@+id/mambo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mambo_sasa_ni_chap_chap_shwari_kabisaa_with_automated_services"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="4dp"
        android:padding="8dp"
        android:maxLines="5"
        android:ellipsize="none"
        android:textAlignment="center"
        />
</LinearLayout>